# cellular-automata

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  Makefile  README.md  benchmark.sh  benchmark_visualize.ipynb  benchmark_visualize_lattice.ipynb  benchmark_visualize_nh.ipynb  benchmark_visualize_render.ipynb  main.cpp  test.cu  teste.c
include/: automata.hpp  automata_base_cpu.hpp  automata_base_gpu.cuh  automata_count_gpu.cuh  automata_gpu.h  automata_interface.hpp  commons_cpu.hpp  commons_gpu.cuh  config.hpp  controls.hpp  display.hpp  gpu_automata.cuh  grid.hpp  grid_cpu.hpp  grid_gpu.hpp  grid_interface.hpp  kernels.cuh  kernels.hpp  pattern.hpp  projection.hpp  rule.hpp  stats.hpp  types.hpp
patterns/: empty.rle  glider.rle  meta-toad.rle  toad.rle
rules/: 104p177.rle  blinker.rle  floodgate_predecessor.rle
src/: automata.cpp  automata_base_cpu.cpp  automata_base_gpu.cu  automata_base_gpu.cuh  automata_bit_gpu.cu  automata_bit_gpu.cuh  automata_count_gpu.cu  automata_gpu.cu  automata_interface.hpp  commons_cpu.hpp  commons_gpu.cuh  config.cpp  config.hpp  controls.cpp  definitions.hpp  display.cpp  gpu_automata.cu  grid.cpp  grid.hpp  grid_cpu.cpp  grid_gpu.cu  kernels.cu  kernels.cuh  main.cpp  pattern.cpp  projection.cpp  projection.hpp  rule.cpp  stats.cpp  stats.hpp  utils.cpp  utils.hpp
tests/: automata_base_cpu_tests.cpp
